--- a/index.html
+++ b/index.html
@@ -1,30 +1,15 @@
-<!DOCTYPE html>
 <!-- 
     Date: 11 June 2025
     Author: John
 -->
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My First HTML Page</title>
+    <title>Hello from HTML</title>
 </head>
 <body>
-
-    <h1>Welcome to My First HTML Page</h1>
-    
-    <p>Hello! I'm learning HTML and this is my first webpage.</p>
-
-    <h2>About Me</h2>
-    <p>I enjoy coding and exploring web development.</p>
-
-    <h3>My Favorite Website</h3>
-    <p>Check out <a href="https://www.google.com" target="_blank">Google</a>.</p>
-
-    <h3>Here is an Image</h3>
-    <img src="https://via.placeholder.com/150" alt="Placeholder image">
-
-    <h3>Click the Button</h3>
-    <button onclick="alert('Thanks for clicking!')">Click Me</button>
-
+    <h1>Hello from HTML!</h1>
 </body>
 </html>
