--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
-<!-- 
-    Date: 11 June 2025
-    Author: John
--->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello from HTML</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My First Website</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Hello from HTML!</h1>
+    <div class="container">
+        <h1>Welcome to My Website</h1>
+        <p id="message">Click the button to change this text.</p>
+        <button onclick="changeMessage()">Click Me!</button>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
